syntax = "proto3";

package core.user.v1;

import "shared/types/v1/meta.proto";
import "google/api/field_behavior.proto";


// User represents the user model
message User {
	string id=1 [(google.api.field_behavior) = OUTPUT_ONLY];// Output-only field
    string first_name=2;
    string last_name=3;
    string nick_name=4;
    string password=5;
    string email=6;
    string country=7;
    UserStatus status=8;
    shared.types.v1.Meta meta=9;
}

message UserFilter {
	string id=1;
	string first_name=2;
	string LastName=3;
	string NickName=4;
	string Email=5;
	string Country=6;
	UserStatus status=7;
}

enum UserStatus{
    USER_STATUS_UNSPECIFIED=0;
    USER_STATUS_ACTIVE=1;
    USER_STATUS_INACTIVE=2;
}

